--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -212,9 +212,8 @@
                             <div class="tab-content overflow-hidden">
                                 <div class="tab-pane active overflow-auto" :id="'details-' + currentVariation.variation.id" role="tabpanel">
                                     <div class="my-4" v-if="currentVariation.properties">
-                                        <div slot="MyProperty" class="my-property">
-
-                                                <div class="row row-properties " v-for="propertyRow in currentVariation.properties">
+                                        <div slot="MyProperty" class="my-property" style="display: flex; flex-direction: column;">
+                                                <div class="row row-properties {{ propertyRow.property.position}}" v-for="propertyRow in currentVariation.properties">
                                                     <div class="row col-xs-12 col-md-12">
                                                         <div class="col-xs-6 col-md-5 " v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
                                                             <b>${ propertyRow.property.names.name }: </b>
