--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -125,7 +125,11 @@
                             </div>
 
                             <div class="discount" v-if="currentVariation.prices.rrp && currentVariation.prices.rrp.data.basePrice > 0 && currentVariation.prices.rrp.data.basePrice > currentVariation.prices.default.unitPrice.value">
-                                {% if item.documents[0].data.prices.rrp and item.documents[0].data.prices.default and item.documents[0].data.prices.rrp.data.basePrice > 0 and item.documents[0].data.prices.default.price.value > 0 and item.documents[0].data.prices.rrp.data.basePrice > item.documents[0].data.prices.default.price.value %}
+                                {% if item.documents[0].data.prices.rrp and
+                                    item.documents[0].data.prices.default and
+                                    item.documents[0].data.prices.rrp.data.basePrice > 0 and
+                                    item.documents[0].data.prices.default.price.value > 0 and
+                                    item.documents[0].data.prices.rrp.data.basePrice > item.documents[0].data.prices.default.price.value %}
                                     {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
                                     {% if item.documents[0].data.texts.lang == 'en' %}Discount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Rabatt:{% endif %} {{ discountNew|round }}%
                                 {% endif %}
