--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -1,5 +1,5 @@
 <script type="x/template" data-component="single-item">
-    <div>
+    <div class="blue-berry-single-item">
         <slot :getDataField="getDataField" :getFilteredDataField="getFilteredDataField">
             <div class="single container-max page-content">
                 <div class="row position-relative">
