--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -14,7 +14,7 @@
         {% include "Ceres::Category.Item.Partials.CategoryParallaxImage" with { 'category': category } %}
     {% endif %}
 
-    <div class="categoriegrid page-content container-max">
+    <div class="blue-berry-category-item categoriegrid page-content container-max">
 
         {% if category is not defined and itemList is not empty %}
             <div class="row mt-3">
